// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconTrophyCupWithTooltip should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-trophy-cup-with-tooltip "
  height={54}
  viewBox="0 0 60 54"
  width={60}
>
  <defs>
    <path
      d="M30 38.707c6.395 0 11.579-5.1 11.579-11.393H18.42c0 6.292 5.184 11.393 11.579 11.393z"
      id="icon-trophy-cup-with-tooltip1-b"
    />
    <filter
      filterUnits="objectBoundingBox"
      height="126.3%"
      id="icon-trophy-cup-with-tooltip1-a"
      width="113%"
      x="-6.5%"
      y="-13.2%"
    >
      <feOffset
        in="SourceAlpha"
        result="shadowOffsetOuter1"
      />
      <feGaussianBlur
        in="shadowOffsetOuter1"
        result="shadowBlurOuter1"
        stdDeviation=".5"
      />
      <feColorMatrix
        in="shadowBlurOuter1"
        values="0 0 0 0 0.960784314 0 0 0 0 0.725490196 0 0 0 0 0.352941176 0 0 0 0.32 0"
      />
    </filter>
  </defs>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M44.822 27.173h-16.17c.546 3.901 3.954 6.911 8.085 6.911 4.13 0 7.539-3.01 8.085-6.911z"
      stroke="#F8D371"
      strokeWidth="2.203"
    />
    <path
      d="M31.348 27.173h-16.17c.546 3.901 3.955 6.911 8.085 6.911 4.13 0 7.539-3.01 8.085-6.911z"
      stroke="#F8D371"
      strokeWidth="2.203"
    />
    <path
      d="M18.972 24h22.056a.55.55 0 0 1 .55.55v2.764H18.422v-2.763a.55.55 0 0 1 .55-.551z"
      fill="#F5B95A"
    />
    <rect
      fill="#F5B95A"
      height="3.314"
      rx=".551"
      width="10.947"
      x="24.526"
      y="41.607"
    />
    <rect
      fill="#0061D5"
      height="8"
      rx=".551"
      width="16.632"
      x="21.789"
      y="43.3"
    />
    <path
      d="M22.34 43.3h15.53a.55.55 0 0 1 .551.55v7.45H21.79v-7.45a.55.55 0 0 1 .551-.55z"
      fill="#FC627A"
    />
    <path
      d="M23.603 43.3h12.794a.55.55 0 0 1 .55.55v7.45H23.053v-7.45a.55.55 0 0 1 .55-.55z"
      fill="#FFF"
      fillOpacity=".2"
    />
    <path
      d="M27.474 36.221h5.052L30.842 44.3h-1.684z"
      fill="#F5B95A"
    />
    <path
      d="M26.34 43.3h7.11a.55.55 0 0 1 .55.55v7.45h-8.21v-7.45a.55.55 0 0 1 .55-.55z"
      fill="#FC627A"
    />
    <use
      fill="#000"
      filter="url(#icon-trophy-cup-with-tooltip1-a)"
      xlinkHref="#icon-trophy-cup-with-tooltip1-b"
    />
    <use
      fill="#F8D371"
      xlinkHref="#icon-trophy-cup-with-tooltip1-b"
    />
    <path
      d="M4.564 2h50.872c.892 0 1.215.093 1.54.267.327.174.583.43.757.756.174.326.267.65.267 1.54v14.873c0 .892-.093 1.215-.267 1.54-.174.327-.43.583-.756.757-.326.174-.65.267-1.54.267H32l-2 2-2-2H4.564c-.892 0-1.215-.093-1.54-.267a1.817 1.817 0 0 1-.757-.756c-.174-.326-.267-.65-.267-1.54V4.563c0-.892.093-1.215.267-1.54.174-.327.43-.583.756-.757.326-.174.65-.267 1.54-.267z"
      fill="#27C281"
    />
    <text
      fill="#FFF"
      fontFamily="Lato-Bold, Lato"
      fontSize="11"
      fontWeight="bold"
      letterSpacing=".6"
    >
      <tspan
        x="6.532"
        y="16"
      />
    </text>
  </g>
</AccessibleSVG>
`;

exports[`icons/general/IconTrophyCupWithTooltip should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-trophy-cup-with-tooltip test"
  height={27}
  title="title"
  viewBox="0 0 60 54"
  width={30}
>
  <defs>
    <path
      d="M30 38.707c6.395 0 11.579-5.1 11.579-11.393H18.42c0 6.292 5.184 11.393 11.579 11.393z"
      id="icon-trophy-cup-with-tooltip2-b"
    />
    <filter
      filterUnits="objectBoundingBox"
      height="126.3%"
      id="icon-trophy-cup-with-tooltip2-a"
      width="113%"
      x="-6.5%"
      y="-13.2%"
    >
      <feOffset
        in="SourceAlpha"
        result="shadowOffsetOuter1"
      />
      <feGaussianBlur
        in="shadowOffsetOuter1"
        result="shadowBlurOuter1"
        stdDeviation=".5"
      />
      <feColorMatrix
        in="shadowBlurOuter1"
        values="0 0 0 0 0.960784314 0 0 0 0 0.725490196 0 0 0 0 0.352941176 0 0 0 0.32 0"
      />
    </filter>
  </defs>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M44.822 27.173h-16.17c.546 3.901 3.954 6.911 8.085 6.911 4.13 0 7.539-3.01 8.085-6.911z"
      stroke="#F8D371"
      strokeWidth="2.203"
    />
    <path
      d="M31.348 27.173h-16.17c.546 3.901 3.955 6.911 8.085 6.911 4.13 0 7.539-3.01 8.085-6.911z"
      stroke="#F8D371"
      strokeWidth="2.203"
    />
    <path
      d="M18.972 24h22.056a.55.55 0 0 1 .55.55v2.764H18.422v-2.763a.55.55 0 0 1 .55-.551z"
      fill="#F5B95A"
    />
    <rect
      fill="#F5B95A"
      height="3.314"
      rx=".551"
      width="10.947"
      x="24.526"
      y="41.607"
    />
    <rect
      fill="#0061D5"
      height="8"
      rx=".551"
      width="16.632"
      x="21.789"
      y="43.3"
    />
    <path
      d="M22.34 43.3h15.53a.55.55 0 0 1 .551.55v7.45H21.79v-7.45a.55.55 0 0 1 .551-.55z"
      fill="#FC627A"
    />
    <path
      d="M23.603 43.3h12.794a.55.55 0 0 1 .55.55v7.45H23.053v-7.45a.55.55 0 0 1 .55-.55z"
      fill="#FFF"
      fillOpacity=".2"
    />
    <path
      d="M27.474 36.221h5.052L30.842 44.3h-1.684z"
      fill="#F5B95A"
    />
    <path
      d="M26.34 43.3h7.11a.55.55 0 0 1 .55.55v7.45h-8.21v-7.45a.55.55 0 0 1 .55-.55z"
      fill="#FC627A"
    />
    <use
      fill="#000"
      filter="url(#icon-trophy-cup-with-tooltip2-a)"
      xlinkHref="#icon-trophy-cup-with-tooltip2-b"
    />
    <use
      fill="#F8D371"
      xlinkHref="#icon-trophy-cup-with-tooltip2-b"
    />
    <path
      d="M4.564 2h50.872c.892 0 1.215.093 1.54.267.327.174.583.43.757.756.174.326.267.65.267 1.54v14.873c0 .892-.093 1.215-.267 1.54-.174.327-.43.583-.756.757-.326.174-.65.267-1.54.267H32l-2 2-2-2H4.564c-.892 0-1.215-.093-1.54-.267a1.817 1.817 0 0 1-.757-.756c-.174-.326-.267-.65-.267-1.54V4.563c0-.892.093-1.215.267-1.54.174-.327.43-.583.756-.757.326-.174.65-.267 1.54-.267z"
      fill="#6d83ff"
    />
    <text
      fill="#FFF"
      fontFamily="Lato-Bold, Lato"
      fontSize="11"
      fontWeight="bold"
      letterSpacing=".6"
    >
      <tspan
        x="6.532"
        y="16"
      >
        text
      </tspan>
    </text>
  </g>
</AccessibleSVG>
`;
